--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                 Filters
             </h2>
             <div class="filters">
-                <div> <a href="#"> <i class="fas fa-money-bill-wave"></i> <p>Low Cost</p> </a> </div>
-                <div> <a href="#"> <i class="fas fa-child"></i> <p>Family-friendly</p> </a> </div>
-                <div> <a href="#"> <i class="fas fa-heart"></i> <p>Romantic</p> </a> </div>
-                <div> <a href="#"> <i class="fas fa-dog"></i> <p>Pets allowed</p> </a> </div>
+                <div class="short-filter"> <a href="#"> <i class="fas fa-money-bill-wave"></i> <p>Low Cost</p> </a> </div>
+                <div class="long-filter"> <a href="#"> <i class="fas fa-child"></i> <p>Family-friendly</p> </a> </div>
+                <div class="short-filter"> <a href="#"> <i class="fas fa-heart"></i> <p>Romantic</p> </a> </div>
+                <div class="long-filter"> <a href="#"> <i class="fas fa-dog"></i> <p>Pets allowed</p> </a> </div>
             </div>
         </div>
 
@@ -143,7 +143,7 @@
             </div> 
 
             <div id="Popular"> 
-                <h1>Most Popular</h1> <i class="fas fa-chart-line"></i>
+                <span><h1>Most Popular</h1> <i class="fas fa-chart-line"></i></span>
                 <div>
                     <a href="#" class="map-pop"> 
                     <div> 
